[package]
name = "image-ndarray"
version = "0.1.1"
edition = "2024"
license = "EUPL-1.2"
authors = ["Gilles Vink <gillesvink@noreply.codeberg.org>"]
description = "Zero-copy implementations for the Image crate to convert to and from ndarrays"
repository = "https://codeberg.org/gillesvink/image-ndarray"
documentation = "https://docs.rs/image-ndarray"
keywords = ["image-processing", "array"]
categories = ["multimedia", "graphics", "data-structures"]

[dependencies]
ndarray = { version = ">=0.13.0" }
image = { version = ">=0.24.0", default-features = false }
thiserror = { version = ">=2.0.0, < 2.1" }
num-traits = ">=0.2.0"

[dev-dependencies]
rstest = "0.26.1"
