[package]
name = "image-ndarray"
version = "0.1.4"
edition = "2024"
license = "EUPL-1.2"
authors = ["Gilles Vink <gillesvink@noreply.codeberg.org>"]
description = "Zero-copy implementations for the Image crate to convert to and from ndarrays"
repository = "https://codeberg.org/gillesvink/image-ndarray"
documentation = "https://docs.rs/image-ndarray"
keywords = ["image-processing", "array"]
categories = ["multimedia", "graphics", "data-structures"]

[features]
default = ["image"]
std = ["thiserror/std"]
image = ["std", "dep:image", "ndarray/std"]

[lib]
name = "image_ndarray"

[dependencies]
image = { version = ">=0.24.0", default-features = false, optional = true }
num-traits = { version = ">=0.2.0", default-features = false }
thiserror = { version = ">=2.0.0, < 2.1", default-features = false }
ndarray = { version = ">=0.16, <0.17", default-features = false }


[dev-dependencies]
rstest = "0.26.1"
